diagnostics: seccomp: socketpair, sendmsg: allow for ipcz
As part of the effort of bringing ipcz to ChromeOS, we need to
enable a few additional syscalls, in this case socketpair and
sendmsg for cros_healthd's delegates.

BUG=b:41494930
TEST=CQ

Change-Id: I12df9540f7937c99c9d52484b78fff5eda57bc50
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5679803
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>
Commit-Queue: Andrea Orru <andreaorru@chromium.org>
Tested-by: Andrea Orru <andreaorru@chromium.org>

--- a/diagnostics/cros_healthd/seccomp/BUILD.gn
+++ b/diagnostics/cros_healthd/seccomp/BUILD.gn
@@ -98,7 +98,9 @@ install_and_check_seccomp_policy("diagnostics_seccomp_delegate") {
 
                         # Required for syslog.
                         "connect",
+                        "sendmsg: 1",
                         "socket: arg0 == AF_UNIX",
+                        "socketpair: arg0 == AF_UNIX",
                       ]
   if (_arch == "arm") {
     required_syscalls += [
