diagnostics: Add keyboard backlight diag
Introduce keyboard backlight diagnostics, where different brightness
levels are tested. See go/cros-healthd-keyboard-backlight-diag for
design details.

BUG=b:271818863
TEST=FEATURES=test emerge-$BOARD diagnostics
TEST=Manually tested on DUT

Change-Id: If8e043c8cace0302fef5c33217896f270ecdb5bf
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5683773
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Commit-Queue: Denny Huang <dennyh@google.com>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Denny Huang <dennyh@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/routines/led/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/led/BUILD.gn
@@ -3,11 +3,15 @@
 # found in the LICENSE file.
 
 source_set("led") {
-  sources = [ "led_lit_up.cc" ]
+  sources = [
+    "keyboard_backlight.cc",
+    "led_lit_up.cc",
+  ]
   public_pkg_deps = [
     "libchrome",
     "libmojo",
   ]
+  pkg_deps = [ "libpower_manager-client" ]
   public_deps = [
     "//diagnostics/cros_healthd/routines:utils",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
@@ -17,10 +21,15 @@ source_set("led") {
 
 if (use.test) {
   source_set("led_test") {
-    sources = [ "led_lit_up_test.cc" ]
+    sources = [
+      "keyboard_backlight_test.cc",
+      "led_lit_up_test.cc",
+    ]
     pkg_deps = [
       "libchrome-test",
       "libmojo",
+      "libpower_manager-client",
+      "libpower_manager-client-test",
     ]
     deps = [
       ":led",
