odml: Add PlatformModelProgressObserver support
Ported from crrev.com/c/5681517

The client need the DLC download progress to let the user know the
current model downloading progress.

BUG=b:351098004
TEST=Install the DLC, and check the progress

Change-Id: Ifd06b3f92d2eee69ede2d8985986352dda7e7c41
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5686134
Reviewed-by: Jim Pollock <jmpollock@chromium.org>
Commit-Queue: Yi Chou <yich@google.com>
Tested-by: Yi Chou <yich@google.com>

--- a/odml/BUILD.gn
+++ b/odml/BUILD.gn
@@ -84,7 +84,7 @@ source_set("odml") {
 }
 
 executable("odml_console") {
-  install_path = "bin"
+  install_path = "/usr/local/bin"
   sources = [ "odml_console.cc" ]
   configs += [ ":target_defaults" ]
   deps = [ ":odml" ]
