patchpanel: split net_base::LogWatcher from DHCPServerController
This CL splits the logic of log monitor from
patchpanel::DHCPServerController out to a separated class
net_base::LogWatcher. We could reuse the class for other process like
dhcpcd.

BUG=b:351973737
TEST=FEATURES=test emerge-nissa net-base patchpanel

Change-Id: I1ee905877371fdbcf41232eace7994507291c6b5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5690613
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/net-base/BUILD.gn
+++ b/net-base/BUILD.gn
@@ -52,6 +52,7 @@ shared_library("libnet-base") {
     "ip_address_utils.cc",
     "ipv4_address.cc",
     "ipv6_address.cc",
+    "log_watcher.cc",
     "mac_address.cc",
     "netlink_attribute.cc",
     "netlink_manager.cc",
@@ -136,6 +137,7 @@ install_chromeos_headers("install_headers") {
     "ip_address_utils.h",
     "ipv4_address.h",
     "ipv6_address.h",
+    "log_watcher.h",
     "mac_address.h",
     "netlink_attribute.h",
     "netlink_manager.h",
@@ -237,6 +239,7 @@ if (use.test) {
       "ip_address_test.cc",
       "ipv4_address_test.cc",
       "ipv6_address_test.cc",
+      "log_watcher_test.cc",
       "mac_address_test.cc",
       "netlink_attribute_test.cc",
       "netlink_packet_test.cc",
