--- a/diagnostics/cros_healthd/routines/led/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/led/BUILD.gn
@@ -2,34 +2,34 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-pkg_config("led_pkg_config") {
-  pkg_deps = [
+source_set("led") {
+  sources = [ "led_lit_up.cc" ]
+  public_pkg_deps = [
     "libchrome",
     "libmojo",
   ]
-}
-
-source_set("led") {
-  sources = [ "led_lit_up.cc" ]
-  configs += [ ":led_pkg_config" ]
-  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
-  deps = [
-    "//diagnostics/base",
-    "//diagnostics/cros_healthd/system",
+  public_deps = [
+    "//diagnostics/cros_healthd/routines:utils",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
+  deps = [ "//diagnostics/cros_healthd/system" ]
 }
 
 if (use.test) {
   source_set("led_test") {
     sources = [ "led_lit_up_test.cc" ]
-    configs += [ ":led_pkg_config" ]
+    pkg_deps = [
+      "libchrome-test",
+      "libmojo",
+    ]
     deps = [
       ":led",
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
+      "//diagnostics/base:test_support",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
       "//diagnostics/cros_healthd/system:test_support",
+      "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
     ]
   }
 }
