secagentd: bpf for file close & attribute change.
Monitor file close and attribute change events in eBPF.

BUG=b:343986520
TEST=Manual Testing on VM

Change-Id: I94fae358312e6190806c2b2cc63ddc378c9cacca
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5691377
Reviewed-by: Jason Ling <jasonling@chromium.org>
Tested-by: Princy Agrawal <princya@google.com>
Commit-Queue: Princy Agrawal <princya@google.com>

--- a/secagentd/BUILD.gn
+++ b/secagentd/BUILD.gn
@@ -56,6 +56,19 @@ generate_ebpf_skeletons("bpf_network") {
   deps = [ ":vmlinux_h" ]
 }
 
+generate_ebpf_skeletons("bpf_file") {
+  sources = [ "bpf/file_bpf.c" ]
+  bpf_skeleton_out_dir = "include/secagentd/bpf_skeletons"
+  if (use.secagentd_min_core_btf) {
+    #Need to match the path in ebuild src_install().
+    btf_inout_dir = "btf"
+  } else {
+    btf_inout_dir = ""
+  }
+  defines = global_use_defines
+  deps = [ ":vmlinux_h" ]
+}
+
 pkg_config("target_defaults") {
   # NOSORT
   pkg_deps = [
@@ -101,6 +114,7 @@ static_library("libsecagent") {
   libs = [ "policy" ]
   configs += [ ":target_defaults" ]
   deps = [
+    ":bpf_file",
     ":bpf_network",
     ":bpf_process",
     "proto:security_xdr_events_proto",
