vm_tools: Re-enable pvclock for x86_64
As b/342168920 is now fixed, we can enable pvclock again.

This is still controlled by Chrome feature flag (see last commit).

BUG=b:352211821,b:342168920
TEST="virtio-pvclock is enabled for this vm" in /var/log/messages with feature enabled on Chrome side
TEST=arc.Suspend.s10c2 with pvclock feature enabled
TEST=arc.Suspend.s10c2 with pvclock feature disabled

Change-Id: I65869b4d9a701cde67ac3b4b151bc9627661bd3d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5692242
Reviewed-by: Keiichi Watanabe <keiichiw@chromium.org>
Tested-by: Tatsuyuki Ishi <ishitatsuyuki@google.com>
Commit-Queue: Tatsuyuki Ishi <ishitatsuyuki@google.com>

--- a/vm_tools/concierge/BUILD.gn
+++ b/vm_tools/concierge/BUILD.gn
@@ -134,8 +134,7 @@ static_library("libconcierge") {
   ]
   defines = [
     # TODO(b/295256641): Re-enable pvclock support for aarch64.
-    # TODO(b/342168920): Re-enable pvclock support for x86_64.
-    "ALLOW_VIRTIO_PVCLOCK=0",
+    "ALLOW_VIRTIO_PVCLOCK=${use.amd64}",
   ]
 
   cflags_cc = [
