diagnostics: Create GN build target with the same name as the directory
Most BUILD files should have a target with the same name as the
directory.
See https://gn.googlesource.com/gn/+/main/docs/style_guide.md#targets.

BUG=b:328015642
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ida5671d9357a589a065f6052aac4b4f40b1e5ec3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5692244
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -38,8 +38,8 @@ source_set("libcros_healthd") {
     "system_api",
   ]
   public_deps = [
-    "//diagnostics/cros_healthd/events:libcros_healthd_events",
-    "//diagnostics/cros_healthd/fetchers:libcros_healthd_fetchers",
+    "//diagnostics/cros_healthd/events",
+    "//diagnostics/cros_healthd/fetchers",
     "//diagnostics/cros_healthd/routines",
     "//diagnostics/cros_healthd/system",
     "//diagnostics/mojom/external:libnetwork_health_mojo_bindings",
@@ -73,9 +73,9 @@ if (use.test) {
       "//diagnostics/cros_healthd/delegate/fetchers:test",
       "//diagnostics/cros_healthd/delegate/routines:test",
       "//diagnostics/cros_healthd/delegate/utils:test",
-      "//diagnostics/cros_healthd/events:libcros_healthd_events_test",
+      "//diagnostics/cros_healthd/events:events_test",
       "//diagnostics/cros_healthd/executor/utils:test",
-      "//diagnostics/cros_healthd/fetchers:libcros_healthd_fetchers_test",
+      "//diagnostics/cros_healthd/fetchers:fetchers_test",
       "//diagnostics/cros_healthd/routines",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
       "//diagnostics/cros_healthd/routines:routine_test",
