--- a/diagnostics/BUILD.gn
+++ b/diagnostics/BUILD.gn
@@ -8,7 +8,7 @@ group("all") {
     ":install_service_manager_policy_config",
     ":install_tmpfiles_config",
     "//diagnostics/cros_health_tool",
-    "//diagnostics/cros_healthd:cros_healthd",
+    "//diagnostics/cros_healthd",
     "//diagnostics/cros_healthd/delegate",
     "//diagnostics/cros_healthd/seccomp",
     "//diagnostics/dbus_bindings",
