--- a/diagnostics/cros_healthd/events/BUILD.gn
+++ b/diagnostics/cros_healthd/events/BUILD.gn
@@ -5,7 +5,7 @@
 import("//common-mk/pkg_config.gni")
 
 # Library that provides cros_healthd's event functionality.
-pkg_config("libcros_healthd_events_pkg_deps") {
+pkg_config("events_pkg_deps") {
   pkg_deps = [
     "libbrillo",
     "libchrome",
@@ -17,13 +17,13 @@ pkg_config("libcros_healthd_events_pkg_deps") {
   ]
 }
 
-pkg_config("libcros_healthd_events_public_pkg_deps") {
+pkg_config("events_public_pkg_deps") {
   pkg_deps = [ "mojo_service_manager" ]
 }
 
-source_set("libcros_healthd_events") {
-  configs += [ ":libcros_healthd_events_pkg_deps" ]
-  public_configs = [ ":libcros_healthd_events_public_pkg_deps" ]
+source_set("events") {
+  configs += [ ":events_pkg_deps" ]
+  public_configs = [ ":events_public_pkg_deps" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system",
@@ -46,7 +46,7 @@ source_set("libcros_healthd_events") {
 }
 
 if (use.test) {
-  pkg_config("libcros_healthd_events_test_pkg_deps") {
+  pkg_config("events_test_pkg_deps") {
     pkg_deps = [
       "libchrome",
       "libchrome-test",
@@ -56,7 +56,7 @@ if (use.test) {
     ]
   }
 
-  source_set("libcros_healthd_events_test") {
+  source_set("events_test") {
     sources = [
       "audio_events_impl_test.cc",
       "audio_jack_events_impl_test.cc",
@@ -71,9 +71,9 @@ if (use.test) {
       "touchscreen_events_impl_test.cc",
       "udev_events_impl_test.cc",
     ]
-    configs += [ ":libcros_healthd_events_test_pkg_deps" ]
+    configs += [ ":events_test_pkg_deps" ]
     deps = [
-      ":libcros_healthd_events",
+      ":events",
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
       "//diagnostics/cros_healthd/executor/utils:test_support",
@@ -87,10 +87,10 @@ if (use.fuzzer) {
   executable("crash_events_uploads_log_parser_fuzzer") {
     sources = [ "crash_events_uploads_log_parser_fuzzer.cc" ]
     configs += [
-      ":libcros_healthd_events_pkg_deps",
+      ":events_pkg_deps",
       "//common-mk/common_fuzzer:common_fuzzer",
       "//common-mk:test",
     ]
-    deps = [ ":libcros_healthd_events" ]
+    deps = [ ":events" ]
   }
 }
