odml: Add unittest for OnDeviceModelService
BUG=b:350812439
TEST=Run the unittest

Change-Id: I3eb508ad58cca5d1708bb574ac5016807d63d264
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5695485
Commit-Queue: Yi Chou <yich@google.com>
Reviewed-by: Jim Pollock <jmpollock@chromium.org>
Tested-by: Yi Chou <yich@google.com>

--- a/odml/BUILD.gn
+++ b/odml/BUILD.gn
@@ -16,6 +16,9 @@ group("all") {
     ":odml_console",
     ":odmld",
   ]
+  if (use.test) {
+    deps += [ ":testrunner" ]
+  }
 }
 
 pkg_config("target_defaults") {
@@ -128,4 +131,28 @@ install_config("install_policy") {
 install_config("install_dbus_config") {
   sources = [ "dbus/org.chromium.Odml.conf" ]
   install_path = "dbus_system_d"
+}
+
+if (use.test) {
+  pkg_config("test_config") {
+    pkg_deps = [ "libchrome-test" ]
+  }
+
+  executable("testrunner") {
+    sources = [
+      "on_device_model/on_device_model_factory_fake.cc",
+      "on_device_model/on_device_model_service_test.cc",
+      "on_device_model/public/cpp/test_support/test_response_holder.cc",
+    ]
+    configs += [
+      "//common-mk:test",
+      ":target_defaults",
+      ":test_config",
+    ]
+    run_test = true
+    deps = [
+      ":odml",
+      "//common-mk/testrunner",
+    ]
+  }
 }
