odml: Guard the odmld with feature_management
We should not deploy this daemon to the device that doesn't have
feature_management support.

BUG=b:352627308
TEST=CQ

Cq-Depend: chromium:5700126
Change-Id: If356b40a1da177043a7b20e3c9792955d71a526d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5699608
Reviewed-by: Jim Pollock <jmpollock@chromium.org>
Tested-by: Yi Chou <yich@google.com>
Commit-Queue: Yi Chou <yich@google.com>

--- a/odml/BUILD.gn
+++ b/odml/BUILD.gn
@@ -7,17 +7,19 @@ import("//common-mk/pkg_config.gni")
 import("//common-mk/proto_library.gni")
 
 group("all") {
-  deps = [
-    ":install_dbus_config",
-    ":install_init",
-    ":install_minijail_conf",
-    ":install_policy",
-    ":install_service_manager_policy_config",
-    ":odml_console",
-    ":odmld",
-  ]
-  if (use.test) {
-    deps += [ ":testrunner" ]
+  if (use.feature_management) {
+    deps = [
+      ":install_dbus_config",
+      ":install_init",
+      ":install_minijail_conf",
+      ":install_policy",
+      ":install_service_manager_policy_config",
+      ":odml_console",
+      ":odmld",
+    ]
+    if (use.test) {
+      deps += [ ":testrunner" ]
+    }
   }
 }
 
