shill: Integrate InProgressTasks modemfwd property
Changes to watch for InProgressTasks property from modemfwd
and set the flashing property based on ongoing flash operation.

BUG=b:352791771
TEST=Tested on Corsola using modem force-flash command.

Change-Id: Id428d52fc8a64fc73255f7d329295519c168e1d4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5704516
Tested-by: Ujjwal Pande <ujjwalpande@google.com>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Commit-Queue: Ujjwal Pande <ujjwalpande@google.com>
Reviewed-by: Michał Mazur <michamazur@google.com>

--- a/modemfwd/dbus/org.chromium.Modemfwd.conf
+++ b/modemfwd/dbus/org.chromium.Modemfwd.conf
@@ -27,6 +27,15 @@
            send_member="ForceFlash" />
   </policy>
 
+  <policy user="shill">
+    <allow send_destination="org.chromium.Modemfwd"
+           send_interface="org.freedesktop.DBus.Properties"
+           send_member="Get"/>
+    <allow send_destination="org.chromium.Modemfwd"
+           send_interface="org.freedesktop.DBus.Properties"
+           send_member="GetAll"/>
+  </policy>
+
   <policy user="shill-scripts">
     <allow send_destination="org.chromium.Modemfwd"
            send_interface="org.chromium.Modemfwd"
