biod: Use BiodFeature in Biometrics Daemon
BUG=b:347224521
TEST=FEATURES=test emerge-zork biod

Change-Id: Icb47c6146765abcf886aec348feb7aefe75b5a01
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5709890
Tested-by: Patryk Duda <patrykd@google.com>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Commit-Queue: Patryk Duda <patrykd@google.com>

--- a/biod/init/biod.conf
+++ b/biod/init/biod.conf
@@ -47,6 +47,7 @@ end script
 # - Get a writeable and empty /var tmpfs path.
 # - Mount the log directory in it.
 # - Mount the metrics directory.
+# - Mount the bio_fw_updater directory (for BiodFeature class).
 # - Mount the FPMCU dev node.
 # - Mount the /dev/uinput directory.
 # - Mount the /sys directory as chromeos-config tries to get the product name,
@@ -77,6 +78,7 @@ exec minijail0                                                               \
   -b ${LOG_DIR},,1                                                           \
   -b /var/lib/metrics,,1                                                     \
   -b /var/lib/biod,,1                                                        \
+  -b /var/lib/bio_fw_updater,,1                                              \
   -b ${FP_DEV}                                                               \
   -b /dev/uinput                                                             \
   -b /sys                                                                    \
