crash: treat msm_dpu devcoredumps as safe
These devcoredump files just contain some DPU hardware registers and
display timings. The info is the output of msm_disp_state_print()
which can be seen at:

https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/tree/drivers/gpu/drm/msm/disp/msm_disp_snapshot_util.c?id=HEAD

BUG=b:353358501
TEST=`FEATURES=test emerge-${BOARD} chromeos-base/crash-reporter`
TEST=Force dump w/ test CL in kernel (see b/353358501).

Change-Id: I05bea860b0002297942ed8bf3cf18b5464173b7a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5710017
Reviewed-by: Andrew Bregger <andrewbregger@google.com>
Reviewed-by: Hirthanan Subenderan <hirthanan@google.com>
Commit-Queue: Douglas Anderson <dianders@chromium.org>
Tested-by: Douglas Anderson <dianders@chromium.org>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -211,6 +211,11 @@ crash_reporter-udev-collection-devcoredump-adreno=\
   tail -n 50 /var/log/messages; \
   echo EOF
 
+crash_reporter-udev-collection-devcoredump-msm_dpu=\
+  echo "===/var/log/messages==="; \
+  tail -n 50 /var/log/messages; \
+  echo EOF
+
 crash_reporter-udev-collection-devcoredump-qcom-venus=\
   echo "===dmesg==="; \
   dmesg | tail -n 50; \
