patchpanel: add NoopSubprocessController
This CL creates the virtual interface and the no-op class for
SubprocessController. Using the virtual interface could avoid adding
System and ProcessManager dependency to the noop class. It's easier to
use at testing.

BUG=b:354063244
TEST=FEATURE=test emerge-nissa patchpanel

Change-Id: I8c01009b6481df97cf08b3ea9fa78e8007738650
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5711596
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -364,6 +364,7 @@ if (use.test) {
       "network/routing_policy_service_test.cc",
       "network/routing_table_test.cc",
       "network_monitor_service_test.cc",
+      "noop_subprocess_controller.cc",
       "proto_utils_test.cc",
       "qos_service_test.cc",
       "routing_service_test.cc",
