biod: Add missing comment in init/biod.conf
CL:3970124 didn't add a comment about mounting /var/lib/biod directory.
Add a missing comment.

BUG=none
TEST=none

Change-Id: I397e72546000a15a1481b00369913eb75e1db158
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5712508
Tested-by: Patryk Duda <patrykd@google.com>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Commit-Queue: Patryk Duda <patrykd@google.com>

--- a/biod/init/biod.conf
+++ b/biod/init/biod.conf
@@ -47,6 +47,7 @@ end script
 # - Get a writeable and empty /var tmpfs path.
 # - Mount the log directory in it.
 # - Mount the metrics directory.
+# - Mount the biod directory.
 # - Mount the bio_fw_updater directory (for BiodFeature class).
 # - Mount the FPMCU dev node.
 # - Mount the /dev/uinput directory.
