arc: Add arcvm-combined-tracing.conf upstart script
See b/340402999

The background tracing will be started under certain conditions (e.g., 1% Finch).
The tracing runs continuously until triggered by a user crash report,
at which point the trace file will be attached to the crash report.

BUG=b:340402999
TEST=start arcvm-combined-tracing

Change-Id: I0d0132126ad60f913c19fb71eb68e742b1a0acf5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5716868
Commit-Queue: Satoshi Niwa <niwa@chromium.org>
Reviewed-by: Yury Khmel <khmel@google.com>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Tested-by: Satoshi Niwa <niwa@chromium.org>

--- a/arc/vm/scripts/BUILD.gn
+++ b/arc/vm/scripts/BUILD.gn
@@ -10,6 +10,7 @@ group("all") {
     ":install_init_config",
     ":install_init_scripts",
     ":install_rsyslog",
+    ":install_tracing_config",
   ]
 }
 
@@ -21,6 +22,7 @@ install_config("install_android-sh") {
 
 install_config("install_init_scripts") {
   sources = [
+    "init/arcvm-combined-tracing.conf",
     "init/arcvm-fsverity-certs.conf",
     "init/arcvm-host.conf",
     "init/arcvm-post-login-services.conf",
@@ -37,6 +39,11 @@ install_config("install_dbus_scripts") {
 
 install_config("install_init_config") {
   sources = [ "init/config.json" ]
+  install_path = "/usr/share/arcvm"
+}
+
+install_config("install_tracing_config") {
+  sources = [ "share/arcvm-combined-tracing-config.textproto" ]
   install_path = "/usr/share/arcvm"
 }
 
