vm_tools: Change startup timing of concierge by config
This CL changes the timing of vm_concierge startup by checking a config.
concierge starts at start-user-session if the config is disabled (this
is the default) or at started-user-session if enabled.

BUG=b:353431869
TEST=`tast run $DUT ui.LoginPerf.2windows` with the config enabled

Cq-Depend: chromium:5717790
Change-Id: I55e727bc3737817e10cf8c167bb9069f2c698b21
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5720269
Tested-by: Ryuichiro Chiba <chibar@chromium.org>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Commit-Queue: Ryuichiro Chiba <chibar@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>

--- a/vm_tools/init/vm_concierge.conf
+++ b/vm_tools/init/vm_concierge.conf
@@ -8,7 +8,9 @@ author         "chromium-os-dev@chromium.org"
 # Start the VM concierge service, which is responsible for managing all the
 # VMs running in the system.
 
-start on start-user-session
+# Change the start timing by config for a finch experiment.
+# See vm_concierge_nodefer.conf for more detail.
+start on started vm_concierge_nodefer or started-user-session
 stop on stopping ui
 respawn
 
