ferrochrome: Now clipboard_sharing_server is loggable in croslog
BUG=b:353432433
TEST=croslog --identifier=clipboard_sharing_server

Change-Id: I466bf9e850b9a46bbcd143ff9648e0b5723e3ebd
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5717633
Tested-by: Seungjae Yoo <seungjaeyoo@google.com>
Reviewed-by: Jiyong Park <jiyong@google.com>
Commit-Queue: Seungjae Yoo <seungjaeyoo@google.com>
Reviewed-by: Yi-Yo Chiang <yochiang@google.com>

--- a/ferrochrome/clipboard/Cargo.toml
+++ b/ferrochrome/clipboard/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+libchromeos = { path = "../../libchromeos-rs/" } # provided by ebuild
+log = "0.4"
 vsock = "0.3"
