dns-proxy: Add support for enabling VLOG in upstart service
This patch adds a cmdline flag of `--vmodule` in the upstart service
config file for dnsproxy, so that dnsproxy can be restarted with
enabling VLOG for debugging. Also pass this flag from the controller
process to the children processes, since it won't be inherited by
default.

There is no default behavior change.

BUG=b:351994513
TEST=Manually tested with the following operations:
  - Reboot DUT, observed no verbose logs in net.log;
  - `restart dns-proxy VMODULE_ARG=*=2`, observed verbose logs in
    net.log;
  - Checked the `ps` result for `dnsproxy`, all processes have the
    expected `--vmodule` flags

Change-Id: If8e8de328ddf3f747c01adb37e82770661fed418
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5717919
Tested-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Jason Iman <jasongustaman@chromium.org>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>

--- a/dns-proxy/init/dns-proxy.conf
+++ b/dns-proxy/init/dns-proxy.conf
@@ -18,6 +18,10 @@ normal exit 0
 # TODO(garrick): Add vm size limit.
 oom score 0
 
+# This will be set as the value of --vmodule to enable VLOG.
+import VMODULE_ARG
+env VMODULE_ARG=
+
 # Increase soft limit of file descriptors to 2048 (default is 1024).
 # Increase hard limit of file descriptors to 16384 (default is 4096).
 # This is to not hit the open file descriptors limit when proxying high number
@@ -98,7 +102,7 @@ script
   args="${args} -c cap_sys_admin,cap_net_bind_service=e"
 
   # Execute dns-proxy.
-  args="${args} /usr/sbin/dnsproxyd"
+  args="${args} /usr/sbin/dnsproxyd --vmodule=${VMODULE_ARG}"
 
   # -e is not specified because the service needs to connect to servers.
 
