diagnostics: Extract EvdevMonitor class
- Extract the class into an individual file for easier maintenance.
- Use a more meaningful class name.

BUG=b:299559145
TEST=FEATURES=test emerge-volteer diagnostics

Cq-Depend: chromium:5724770
Change-Id: I70d893daccd0a0292d2f5eb51f6c38bc9c53b899
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5725229
Reviewed-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/utils/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/utils/BUILD.gn
@@ -6,6 +6,7 @@ source_set("utils") {
   sources = [
     "display_utils.cc",
     "edid.cc",
+    "evdev_monitor.cc",
     "evdev_utils.cc",
     "libevdev_wrapper_impl.cc",
     "ndt_client.cc",
@@ -30,6 +31,7 @@ if (use.test) {
   source_set("test") {
     sources = [
       "edid_test.cc",
+      "evdev_monitor_test.cc",
       "evdev_utils_test.cc",
       "ndt_client_test.cc",
       "psr_cmd_test.cc",
