--- a/modemfwd/BUILD.gn
+++ b/modemfwd/BUILD.gn
@@ -85,6 +85,7 @@ static_library("libmodemfw") {
     "modem_tracker.cc",
     "notification_manager.cc",
     "prefs.cc",
+    "recovery_file.cc",
     "scoped_temp_file.cc",
     "suspend_checker.cc",
     "upstart_job_controller.cc",
