diagnostics: Allow all ioctl arguments for egl seccomp in Flex device
Create a separate seccomp policy that allows all IOCTL arguments for
flex device.

See Design Doc here:
go/healthd-allow-graphics-ioctl

See security consultation here:
b/346462471

BUG=b:354620845
TEST=(shell) `emerge-reven diagnostics` and manual inspection of
             seccomp file
     (shell) `emerge-dedede diagnostics` and manual inspection of
             seccomp file
     (DUT) cros-health-tool telem --category=graphics

Change-Id: I9a2ce1e449858f950bb30c60cbca47afa39c959b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5725399
Reviewed-by: Byron Lee <byronlee@chromium.org>
Tested-by: Ethan Cheng <yycheng@google.com>
Commit-Queue: Ethan Cheng <yycheng@google.com>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/seccomp/BUILD.gn
+++ b/diagnostics/cros_healthd/seccomp/BUILD.gn
@@ -75,7 +75,6 @@ install_and_check_seccomp_policy("diagnostics_seccomp_delegate") {
     "${_arch}/ec_led-seccomp.policy",
     "${_arch}/ec_lid_angle-seccomp.policy",
     "${_arch}/ec_thermal-seccomp.policy",
-    "${_arch}/egl-seccomp.policy",
     "${_arch}/evdev-seccomp.policy",
     "${_arch}/fingerprint-seccomp.policy",
     "${_arch}/floating_point-seccomp.policy",
@@ -87,6 +86,17 @@ install_and_check_seccomp_policy("diagnostics_seccomp_delegate") {
   ]
   if (_arch == "amd64") {
     sources += [ "${_arch}/psr-seccomp.policy" ]
+  }
+
+  # b/354620845: The reven board uses a different graphics driver than most
+  # ChromeOS device, and requires a different set of IOCTL arguments. There
+  # is very limited coverage of flex device within the labs, so graphics fetcher
+  # often crashes on real devices. The reven-specific seccomp policy enables all
+  # IOCTL arguments for graphics fetcher in reven board.
+  if (use.mesa_reven) {
+    sources += [ "reven/egl-seccomp.policy" ]
+  } else {
+    sources += [ "${_arch}/egl-seccomp.policy" ]
   }
 
   install_path = "seccomp_policy"
