bpf-mons: rename snoops to mons
Rename bpf-snoops to bpf-mons (monitors, monitoring programs) per
chromeos security team request.

BUG=b:353909098
TEST=emerge-brya-kernelnext bpf-mons

Change-Id: Ibd466643c81af9591451fbb95568800ba76090b8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5733054
Commit-Queue: Sergey Senozhatsky <senozhatsky@chromium.org>
Tested-by: Sergey Senozhatsky <senozhatsky@chromium.org>
Reviewed-by: Ricardo Ribalda <ribalda@chromium.org>

--- a/bpf-mons/BUILD.gn
+++ b/bpf-mons/BUILD.gn
@@ -7,8 +7,8 @@ import("//common-mk/pkg_config.gni")
 
 group("all") {
   deps = [
-    ":bpf-fdsnoop",
-    ":bpf-memsnoop",
+    ":bpf-fdmon",
+    ":bpf-memmon",
   ]
 }
 
@@ -18,42 +18,42 @@ pkg_config("target_defaults") {
 }
 
 generate_vmlinux("vmlinux_h") {
-  vmlinux_out_dir = "include/snoops/vmlinux"
+  vmlinux_out_dir = "include/mons/vmlinux"
   btf_out_dir = "bpf"
 }
 
-generate_ebpf_skeletons("bpf_memsnoop") {
-  sources = [ "memsnoop.bpf.c" ]
-  bpf_skeleton_out_dir = "include/snoops/bpf_skeletons"
+generate_ebpf_skeletons("bpf_memmon") {
+  sources = [ "memmon.bpf.c" ]
+  bpf_skeleton_out_dir = "include/mons/bpf_skeletons"
   btf_inout_dir = "bpf"
   deps = [ ":vmlinux_h" ]
 }
 
-generate_ebpf_skeletons("bpf_fdsnoop") {
-  sources = [ "fdsnoop.bpf.c" ]
-  bpf_skeleton_out_dir = "include/snoops/bpf_skeletons"
+generate_ebpf_skeletons("bpf_fdmon") {
+  sources = [ "fdmon.bpf.c" ]
+  bpf_skeleton_out_dir = "include/mons/bpf_skeletons"
   btf_inout_dir = "bpf"
   deps = [ ":vmlinux_h" ]
 }
 
-executable("bpf-memsnoop") {
+executable("bpf-memmon") {
   sources = [
-    "libsnoop.cc",
-    "memsnoop.cc",
+    "libmon.cc",
+    "memmon.cc",
   ]
   configs += [ ":target_defaults" ]
   libs = [ "blazesym_c" ]
-  deps = [ ":bpf_memsnoop" ]
+  deps = [ ":bpf_memmon" ]
   install_path = "bin"
 }
 
-executable("bpf-fdsnoop") {
+executable("bpf-fdmon") {
   sources = [
-    "fdsnoop.cc",
-    "libsnoop.cc",
+    "fdmon.cc",
+    "libmon.cc",
   ]
   configs += [ ":target_defaults" ]
   libs = [ "blazesym_c" ]
-  deps = [ ":bpf_fdsnoop" ]
+  deps = [ ":bpf_fdmon" ]
   install_path = "bin"
 }
