mojo_service_manager: allow write access to /dev/shm for ipcz
As part of the effort of bringing ipcz to ChromeOS, we need to
allow mojo_service_manager to access /dev/shm to prevent it
from crashing.

BUG=b:41494930
TEST=CQ passes

Change-Id: Ia829c1603d663dfd07aa84dbe142c375516ef46a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5733714
Tested-by: Andrea Orru <andreaorru@chromium.org>
Commit-Queue: Andrea Orru <andreaorru@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>

--- a/mojo_service_manager/init/minijail/mojo_service_manager.conf
+++ b/mojo_service_manager/init/minijail/mojo_service_manager.conf
@@ -11,3 +11,4 @@ N
 no-fs-restrictions
 k = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC,mode=755,size=10M
 b = /run/mojo,/run/mojo,1
+b = /dev/shm,/dev/shm,1
