--- a/secagentd/BUILD.gn
+++ b/secagentd/BUILD.gn
@@ -102,6 +102,7 @@ static_library("libsecagent") {
     "daemon.cc",
     "device_user.cc",
     "factories.cc",
+    "file_plugin.cc",
     "message_sender.cc",
     "metrics_sender.cc",
     "network_plugin.cc",
@@ -179,6 +180,7 @@ if (use.test) {
       "test/bpf_skeleton_factory_tests.cc",
       "test/device_user_test.cc",
       "test/disable_unaffiliated_secagent_test.cc",
+      "test/file_plugin_test.cc",
       "test/message_sender_test.cc",
       "test/metrics_sender_test.cc",
       "test/network_bpf_test.cc",
