bpf-mons: add fd/mem monitors test application
Add a simple test app which executes some of the functions
that fdmon and memmon intercept.

BUG=b:353909098
TEST=compile tested, ran the app on brya

Change-Id: I33eb52d5efdb41db3f182c17977713bdd16aa9cc
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5740714
Reviewed-by: Ricardo Ribalda <ribalda@chromium.org>
Tested-by: Sergey Senozhatsky <senozhatsky@chromium.org>
Commit-Queue: Sergey Senozhatsky <senozhatsky@chromium.org>

--- a/bpf-mons/BUILD.gn
+++ b/bpf-mons/BUILD.gn
@@ -9,6 +9,7 @@ group("all") {
   deps = [
     ":bpf-fdmon",
     ":bpf-memmon",
+    ":bpf-mons-fdmem-test",
   ]
 }
 
@@ -56,4 +57,8 @@ executable("bpf-fdmon") {
   libs = [ "blazesym_c" ]
   deps = [ ":bpf_fdmon" ]
   install_path = "bin"
+}
+
+executable("bpf-mons-fdmem-test") {
+  sources = [ "test/fdmem-test.cc" ]
 }
