diagnostics: Use forward declaration in delegate_impl.h
Chromium style prefers forward declarations to #includes where possible.
See
https://chromium.googlesource.com/chromium/src/+/HEAD/styleguide/c++/c++.md#forward-declarations-vs_includes.

BUG=none
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I22020090a5706832e434ddfa7bf1df593c70bff6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5740280
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/BUILD.gn
@@ -4,12 +4,10 @@
 
 source_set("libexecutor_delegate") {
   sources = [ "delegate_impl.cc" ]
-  public_pkg_deps = [
-    "libchrome",
-    "libmojo",
-  ]
+  public_pkg_deps = [ "libmojo" ]
   pkg_deps = [
     "libbrillo",
+    "libchrome",
     "libec",
   ]
   public_deps = [ "//diagnostics/cros_healthd/mojom:delegate_mojo_bindings" ]
